Import / Analyze: - CSS fix: status div was too small

--- a/public/css/otc/style.css
+++ b/public/css/otc/style.css
@@ -659,7 +659,7 @@ label {
     top:38px;
     right:18px;
     width:200px;
-    height:124px;
+    height:182px;
     background-color:#ffff00;
     border:1px solid #CCC;
     /*opacity:0.8;*/
